# AEGIS-Autonomous-Enterprise-Grid-Intelligence-System

./: .env.example  .gitignore  PROGRESS.md  README.md  main.py  pyproject.toml  seed.py  write_tests.py  write_tests_v2.py  write_tests_v3.py
agent-dashboard/: package-lock.json  package.json
agent-dashboard/src/: App.jsx  index.css
agent-dashboard/src/api/: agent.js
agent-dashboard/src/components/: AgentHeader.jsx  AgentLogin.jsx  TicketTable.jsx
backend/: config.py  logger.py  main.py
backend/agent/: groq_client.py  tool_executor.py  tools.py
backend/api/middleware/: auth.py  jwt_auth.py  rate_limit.py
backend/api/routes/: auth.py  health.py  helpdesk.py  tickets.py
backend/db/: models.py  postgres.py  redis_session.py
backend/schemas/: request.py  response.py
backend/services/: auth_service.py  employee_service.py  report_service.py  ticket_service.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: .gitkeep
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: helpdesk.js
frontend/src/components/: ChatPanel.jsx  Header.jsx  LoginPage.jsx  TicketSidebar.jsx  ToolPanel.jsx
tests/: conftest.py  test_auth.py  test_employee_service.py  test_health.py  test_helpdesk.py  test_report_service.py  test_ticket_service.py  test_tool_executor.py
