[project]
name = "aegis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.21",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
